<resources>
    <string name="app_name">Engilize</string>
    <string name="btnLoggingString">Go To Account</string>
    <string name="btnBeginString">Begin Learning</string>
    <string name="btnCheckString">Pass the exam</string>
    <string name="nameLogin">Login</string>
    <string name="nameSignUp">Sign Up</string>
    <string name="nameForgot">Forgot Password</string>
    <string name="nameProfileInfo">Edit Profile</string>
    <string name="nameTests">Tests</string>
    <string name="nameCreateTest">Create Test</string>
    <string name="nameChats">Your Chats</string>
    <string name="nameResult">Result</string>
    <string name="nameLeaderBord">Leader Board</string>
    <string name="nameCardWords">Cards Of Words</string>
    <string name="nameCreateCardWord">Create Card</string>
    <string name="nameMap">Map</string>
    <string name="errorName">Please enter your name</string>
    <string name="errorEmail">Please enter your email</string>
    <string name="errorDOB">Please select your date of birth</string>
    <string name="errorGender">Please select your gender</string>
    <string name="errorMobile">Please enter your phone number</string>
    <string name="errorPassword">Please enter your password</string>
    <string name="errorConfirmedPassword">Password does not match</string>
    <string name="requiredName">Name is required</string>
    <string name="requiredEmail">Email is required</string>
    <string name="requiredDOB">Date of birth is required</string>
    <string name="requiredGender">Gender is required</string>
    <string name="requiredMobile">Phone number is required</string>
    <string name="requiredPassword">Password is required</string>
    <string name="requiredConfirmedPassword">Enter same password</string>
    <string name="progressBarLogging">Logging...</string>
    <string name="progressBarCreating">Creating...</string>
    <string name="progressBarSending">Sending email...</string>
    <string name="progressBarSendingOTP">Sending key...</string>
    <string name="progressBarLoadingUserData">Loading users data...</string>
    <string name="progressBarOpening">Opening...</string>
    <string name="progressBarSaving">Saving...</string>
    <string name="progressBarUpdating">Updating...</string>
    <string name="progressBarLoading">Loading...</string>
    <string name="progressBarLoadingModel">Please wait. The model for translation is being downloaded...</string>
    <string name="failExist">User does not exist</string>
    <string name="successSentEmail">Email was sent. Check your inbox</string>
    <string name="politicsRules">By clicking the register button, you agree to the processing of personal data</string>
    <string name="title_activity_feed">FeedActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_image">Add Image</string>
    <string name="add_score_text">If you complete the full registration, you will get score</string>
    <string name="nameFeed">Study Categories</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="author">Author</string>
    <string name="title">Title</string>
    <string name="numberofquestions">numberOfQuestions</string>
    <string name="time">time</string>
    <string name="percent">Percent</string>
    <string name="write_word_in_english">Write Word In English</string>
    <string name="write_description">Write Description</string>
    <string name="search_in_wikipedia">Search In Wikipedia</string>
    <string name="what_card_are_you_looking_for">What card are you looking for?</string>
    <string name="numberofcards">numberOfCards</string>
    <string name="level">level</string>
    <string name="write_e_mail">Write E-mail</string>
    <string name="write_password">Write Password</string>
    <string name="i_forgot_password">I Forgot Password</string>
    <string name="do_not_have_an_account">Do not have an account?</string>
    <string name="login">Login</string>
    <string name="sign_in_with_google">Sign In With Google</string>
    <string name="sign_in_by_phone_number">Sign In By Phone Number</string>
    <string name="dateOfBirth">Your Date Of Birth is </string>
    <string name="write_name">Write Name</string>
    <string name="click_to_choose_your_date_of_birth">Click To Choose Your Date Of Birth</string>
    <string name="gender">Gender</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="choose_language_you_know">Choose language you know</string>
    <string name="update">Update</string>
    <string name="name_must_be_not_empty">Name must be not empty</string>
    <string name="please_choose_time_doing">Please, choose time doing</string>
    <string name="question_must_be_not_empty">Question must be not empty</string>
    <string name="option_must_be_not_empty">Option must be not empty</string>
    <string name="must_be_only_1_correct_option">Must be only 1 correct option</string>
    <string name="there_are_must_be_1_correct_option">There are must be 1 correct option</string>
    <string name="must_be_at_least_2_options">Must be at least 2 options</string>
    <string name="add_at_least_one_question">Add at least one question</string>
    <string name="name_size">Name must be no more than 10 symbols</string>
    <string name="minutes">" minutes"</string>
    <string name="location">Location</string>
    <string name="please_enable_geolocation">Please, Enable Geolocation</string>
    <string name="cancel">Cancel</string>
    <string name="open_settings">Open Settings</string>
    <string name="answered">Answered</string>
    <string name="not_visited">Not Visited</string>
    <string name="unanswered">Unanswered</string>
    <string name="review">Review</string>
    <string name="your_score_is">Your Score Is</string>
    <string name="time_taken">Time Taken</string>
    <string name="total_questions">Total Questions</string>
    <string name="correct">Correct</string>
    <string name="wrong">Wrong</string>
    <string name="un_attempted">Un-Attempted</string>
    <string name="number">number</string>
    <string name="check_your_place_in_leaderboard">Check Your Place In LeaderBoard</string>
    <string name="re_attempt">Re-Attempt</string>
    <string name="view_answers">View Answers</string>
    <string name="search_in_google">Search In Google</string>
    <string name="create_your_word_card">Create Your Word Card</string>
    <string name="write_name_of_card">Write name of card</string>
    <string name="write_what_topic_the_words_relate_to">Write what topic the words relate to</string>
    <string name="choose_level_of_words">Choose level of words</string>
    <string name="add_word">Add Word</string>
    <string name="submit">Submit</string>
    <string name="test">Test</string>
    <string name="chats">Chats</string>
    <string name="map">Map</string>
    <string name="place">Place</string>
    <string name="score">Score</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="leaderbord">LeaderBord</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="learning">learning</string>
    <string name="status">Status</string>
    <string name="write_a_message">Write a message</string>
    <string name="online">Online</string>
    <string name="offline">Offline</string>
    <string name="foreground_service_location">Foreground Service Location</string>
    <string name="change_wallpaper">Change Wallpaper</string>
    <string name="amount_of_users_number">Number Of Users: Number</string>
    <string name="you">You</string>
    <string name="score_0">Score: 0</string>
    <string name="place_0">Place: 0</string>
    <string name="write_question">Write Question</string>
    <string name="add_option">Add Option</string>
    <string name="what_are_you_looking_for">What are you looking for?</string>
    <string name="there_s_nothing_here_yet">There\'s nothing here yet</string>
    <string name="if_you_pronounce_the_word_correctly_you_will_get_score">If you pronounce the word correctly, you will get score</string>
    <string name="word">Word</string>
    <string name="say">Say</string>
    <string name="close">Close</string>
    <string name="let_s_do_it">Let\'s do it</string>
    <string name="create_new_category">Create New Category</string>
    <string name="write_name_of_category">Write Name Of Category</string>
    <string name="create">Create</string>
    <string name="add_question">Add Question</string>
    <string name="create_your_test">Create Your Test</string>
    <string name="write_name_of_test">Write Name Of Test</string>
    <string name="choose_time_of_doing_your_test_minutes">Choose Time Of Doing Your Test (minutes)</string>
    <string name="option">Option</string>
    <string name="name">Name</string>
    <string name="bookmarks_successfully_saved">Bookmarks successfully saved</string>
    <string name="can_not_save_bookmarks">Can not save bookmarks</string>
    <string name="can_not_load_categories">Can not load categories</string>
    <string name="name_must_be_not_null">Name must be not null</string>
    <string name="category_was_created">Category was created</string>
    <string name="can_not_create_category">Can not create category</string>
    <string name="database_isn_t_available">Database isn\'t available</string>
    <string name="it_s_you">It\'s you!</string>
    <string name="test_successfully_created">Test successfully created</string>
    <string name="error_occurred_while_saving_test_data">Error occurred while saving test data</string>
    <string name="card_successfully_created">Card Successfully Created</string>
    <string name="error_occurred_try_later">Error occurred. Try later</string>
    <string name="description_must_be_not_empty">Description must be not empty</string>
    <string name="name_of_word_must_be_not_empty">Name of word must be not empty</string>
    <string name="description_of_word_must_be_not_empty">Description of word must be not empty</string>
    <string name="find_or_load_image">Find or Load Image</string>
    <string name="can_not_read_image">Can not read image</string>
    <string name="write_text">Write text</string>
    <string name="can_not_find_user">Can not find user</string>
    <string name="write_text_please">Write text, please</string>
    <string name="please_enter_your_registered_email">Please enter your registered email</string>
    <string name="email_is_required">Email is required</string>
    <string name="try_later">Try Later</string>
    <string name="can_not_load_words">Can not load words</string>
    <string name="something_went_wrong_with_getting_data">Something went wrong with getting data</string>
    <string name="something_went_wrong_try_later">Something went wrong. Try later</string>
    <string name="can_not_sign_up">Can not sign up</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="enter_email">Enter email!</string>
    <string name="enter_password">Enter Password!</string>
    <string name="can_not_login">"Can not login: "</string>
    <string name="sign_in_was_successful">Sign In Was Successful</string>
    <string name="write_code">Write Code</string>
</resources>