<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.fragments.CreateTestFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_your_test"
            android:textStyle="bold"
            android:gravity="center"
            android:textSize="24sp"
            android:layout_marginVertical="8dp"
            android:textColor="@color/secondary_color" />

        <EditText
            android:id="@+id/testName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:hint="@string/write_name_of_test"
            android:textColor="@color/secondary_color"
            android:textColorHint="@color/secondary_color"
            android:textSize="20sp"
            android:inputType="text"
            android:padding="16dp"
            android:layout_marginBottom="12dp"
            android:importantForAutofill="no" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:hint="@string/choose_time_of_doing_your_test_minutes"
            android:textColorHint="@color/design_default_color_primary"
            android:textSize="20sp"
            android:layout_marginBottom="12dp" />

        <NumberPicker
            android:id="@+id/numberPicker"
            android:layout_marginHorizontal="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:id="@+id/layoutList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="12dp">

        </LinearLayout>

        <Button
            android:id="@+id/btnAddQuestion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_question"
            android:layout_marginTop="8dp"
            android:layout_marginStart="20dp"
            android:paddingHorizontal="8dp"
            android:textColor="@color/white"
            android:padding="8dp"
            android:textSize="20sp"
            android:drawableStart="@drawable/ic_add"
            android:drawablePadding="8dp"
            android:background="@drawable/round_primary"/>

        <Button
            android:id="@+id/btnSubmit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:padding="8dp"
            android:layout_marginVertical="12dp"
            android:layout_marginHorizontal="20dp"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:background="@drawable/round_primary"/>

    </LinearLayout>

</ScrollView>