<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp"
    android:layout_marginTop="8dp"
    android:layout_marginBottom="4dp"
    android:paddingBottom="16dp"
    android:background="@drawable/round_view_with_stroke">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="8dp"
        android:layout_gravity="center"
        android:elevation="5dp"
        android:padding="8dp">

        <TextView
            android:id="@+id/author"
            android:text="@string/author"
            android:textSize="16sp"
            android:textColor="#616161"
            android:gravity="end"
            android:layout_marginBottom="8dp"
            android:paddingHorizontal="4dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textColor="@color/design_default_color_primary"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/numberOfQuestions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_gravity="center"
            android:drawablePadding="4dp"
            android:text="@string/numberofquestions"
            android:textColor="@color/design_default_color_primary"
            android:textAlignment="center"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_gravity="center"
            android:text="@string/time"
            android:drawablePadding="4dp"
            app:drawableTint="@color/design_default_color_primary"
            android:drawableStart="@drawable/ic_clock"
            android:textColor="@color/design_default_color_primary"
            android:textAlignment="center"
            android:textSize="20sp"/>

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="?android:attr/progressBarStyleHorizontal"
            android:progressTint="@color/design_default_color_primary"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="80dp"
            android:layout_marginRight="80dp" />

        <TextView
            android:id="@+id/percent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/design_default_color_primary"
            android:textAlignment="center"
            android:text="@string/percent"
            android:textSize="16sp"
            />
    </LinearLayout>

</LinearLayout>