<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.CreateWordCardFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_your_word_card"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:textSize="24sp"
            android:layout_margin="15dp"
            android:textColor="@color/secondary_color" />

        <EditText
            android:id="@+id/cardName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="12dp"
            android:layout_weight="1"
            android:inputType="text"
            android:importantForAutofill="no"
            android:hint="@string/write_name_of_card"
            android:textColor="@color/secondary_color"
            android:textColorHint="@color/secondary_color"
            android:textSize="20sp"
            android:paddingHorizontal="10dp"
            android:layout_marginBottom="12dp"
            />

        <EditText
            android:id="@+id/cardDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:importantForAutofill="no"
            android:layout_marginHorizontal="12dp"
            android:layout_weight="1"
            android:hint="@string/write_what_topic_the_words_relate_to"
            android:textColor="@color/secondary_color"
            android:textColorHint="@color/secondary_color"
            android:textSize="20sp"
            android:inputType="textMultiLine"
            android:paddingHorizontal="10dp"
            android:layout_marginBottom="12dp"
            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="12dp"
                android:layout_weight="1"
                android:hint="@string/choose_level_of_words"
                android:textColorHint="@color/design_default_color_primary"
                android:textSize="20sp"
                android:paddingHorizontal="8dp"
                android:layout_marginBottom="12dp"/>

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/spinnerLevels"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:padding="16dp"
                android:layout_weight="1"
                android:background="@drawable/round_view_with_stroke"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutListWords"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="12dp">

        </LinearLayout>

        <Button
            android:id="@+id/btnAddWord"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_word"
            android:layout_margin="12dp"
            android:textColor="@color/white"
            android:textAllCaps="true"
            android:padding="8dp"
            android:textSize="16sp"
            android:drawableStart="@drawable/ic_add"
            android:drawablePadding="8dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:background="@drawable/round_primary"/>

        <Button
            android:id="@+id/btnSubmit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textAllCaps="true"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:background="@drawable/round_primary_card"/>

    </LinearLayout>


</ScrollView>