<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.LoginFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.LoginActivity">

        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:autofillHints="emailAddress"
            android:drawableStart="@drawable/ic_dog"
            android:drawableTint="@color/design_default_color_primary"
            android:drawablePadding="16dp"
            android:textColor="@color/design_default_color_primary"
            android:hint="@string/write_e_mail"
            android:ems="10"
            android:inputType="textEmailAddress"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:autofillHints="password"
            android:layout_marginEnd="32dp"
            android:drawableStart="@drawable/ic_castle"
            android:drawableTint="@color/design_default_color_primary"
            android:drawablePadding="16dp"
            android:textColor="@color/design_default_color_primary"
            android:hint="@string/write_password"
            android:ems="10"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editTextEmail"/>

        <Button
            android:id="@+id/btnLog"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:layout_marginTop="24dp"
            android:text="@string/login"
            android:textColor="@color/white"
            android:background="@drawable/round_corner_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editTextPassword"
            android:visibility="gone"/>

        <RelativeLayout
            android:id="@+id/layoutLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="8dp"
            android:layout_marginTop="24dp"
            android:layout_marginHorizontal="32dp"
            android:background="@drawable/round_corner_btn"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnLog"
            android:padding="8dp"
            android:gravity="center">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:gravity="center"/>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/signGoogle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="8dp"
            android:layout_marginTop="24dp"
            android:layout_marginHorizontal="32dp"
            android:background="@drawable/round_corner_btn"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layoutLogin"
            android:gravity="center"
            android:padding="8dp">

            <ImageView
                android:id="@+id/imageGoogle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_google_logo"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/sign_in_with_google"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:gravity="center"
                android:layout_toEndOf="@id/imageGoogle"/>

        </RelativeLayout>

        <TextView
            android:id="@+id/labelForgot"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:text="@string/i_forgot_password"
            android:textSize="18sp"
            android:gravity="center"
            android:textColor="@color/design_default_color_primary"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/signGoogle"/>

        <TextView
            android:id="@+id/labelAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:text="@string/do_not_have_an_account"
            android:textColor="@color/purple_500"
            android:textSize="18sp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/labelForgot"/>

        <RelativeLayout
            android:id="@+id/signPhone"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:paddingHorizontal="8dp"
            android:layout_marginTop="32dp"
            android:visibility="gone"
            android:background="@drawable/round_corner_btn"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/signGoogle"
            android:gravity="center"
            >

            <ImageView
                android:id="@+id/imagePhone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="4dp"
                android:contentDescription="@string/app_name"
                android:layout_marginBottom="4dp"
                android:padding="4dp"
                android:src="@drawable/ic_phone" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="6dp"
                android:text="@string/sign_in_by_phone_number"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:gravity="center"
                android:layout_toEndOf="@id/imagePhone"/>

        </RelativeLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>